# idram1984.github.io

./: .buildinfo  _config.yml  create_notebook.py  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup_scheduled_task.ps1  update_book.py
_build/.doctrees/: environment.pickle  intro.doctree
_build/.doctrees/notebooks/: dashboard1.doctree
_build/html/: .buildinfo  genindex.html  intro.html  search.html  searchindex.js
_build/html/_sources/notebooks/: dashboard1.ipynb
_build/html/notebooks/: dashboard1.html
_build/jupyter_execute/notebooks/: dashboard1.ipynb
_sources/: intro.md
_sources/notebooks/: dashboard1.ipynb
docs/: _toc.yml  intro.md
notebooks/: dashboard1.html
